add 2nd and 3rd section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,14 +33,14 @@
   background-repeat: no-repeat;
   position: absolute;
   height: 562px;
-  top:200px;
-  left:10px;
+  top: 200px;
+  left: 10px;
 }
 
-body {
+/* body {
   margin: 0;
   font-family: Arial, sans-serif;
-}
+} */
 .navbar {
   width: 100%;
   left: 0px;
@@ -55,7 +55,6 @@ body {
   max-width: 1200px;
   margin: auto;
 } */
-
 
 .logo img {
   height: 90px;
@@ -80,7 +79,7 @@ body {
 }
 
 .nav-links a.active {
-  color: #EBA82C;
+  color: #eba82c;
 }
 
 .menu-toggle {
@@ -97,20 +96,20 @@ body {
   margin-top: 200px;
 }
 .heading {
-font-weight: 700;
-font-size: 76px;
-line-height: 80px;
-letter-spacing: 0.346587px;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-weight: 700;
+  font-size: 76px;
+  line-height: 80px;
+  letter-spacing: 0.346587px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 p {
   margin: 10px 0;
-font-style: normal;
-font-weight: 700;
-font-size: 21px;
-line-height: 21px;
-text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 21px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .cta-button {
@@ -119,15 +118,180 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-top: 15px;
   font-size: 1em;
   color: white;
-  border:2px solid #ffffff;
+  border: 2px solid #ffffff;
   border-radius: 47px;
   cursor: pointer;
   text-decoration: none;
 }
 
 .cta-button:hover {
-  background: #EBA82C;
+  background: #eba82c;
+}
+.idea {
+  display: flex;
+  align-items: center;
+  min-height: 50vh;
+}
+.kick-box {
+  /* background-color: white; */
+  padding: 100px;
+  /* border-radius: 10px; */
+  /* max-width: 1000px; */
+  margin: auto;
+  /* text-align: center; */
+}
 
+.h2 {
+  margin-bottom: 15px;
+}
+
+.paragraph {
+  margin-bottom: 30px;
+  width: 1090px;
+  height: 108px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 21px;
+  line-height: 27px;
+  letter-spacing: -0.284167px;
+  text-shadow:none;
+}
+
+.stats {
+  display: flex;
+  justify-content:center;
+  /* flex-wrap: wrap; */
+  margin-bottom: 30px;
+  gap:30px;
+  margin-left: -40%;
+}
+
+.stat {
+  /* text-align: center; */
+  margin: 10px;
+}
+
+.stat span {
+  font-size: 80px;
+  font-weight: 400;
+  color: #e7a622;
+}
+
+.stat p {
+  font-size: 21px;
+  font-weight: 700;
+  color: #000000;
+  text-shadow: none;
+}
+
+.button-container {
+  text-align:end;
+  margin-top: -11%;
+  margin-right: 10%;
+}
+
+.submit-button {
+  background-color: #ffffff;
+  color:#FF132D;
+  padding: 12px 20px;
+  font-size: 21px;
+  font-weight: 700;
+  border: 2px solid #FF132D;
+  border-radius: 47px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.submit-button:hover {
+  background-color:#e7a622;
+}
+.video{
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #F5F5F5;
+}
+
+.video-heading {
+  /* font-size: 24px;
+  font-weight: bold;
+  text-align: left;
+  margin-bottom: 10px; */
+position: absolute;
+/* width: 924px;
+height: 62px; */
+left: 145px;
+top: 1502px;
+font-weight: 700;
+font-size: 49px;
+line-height: 62px;
+letter-spacing: -0.663056px;
+}
+
+.video-container {
+  position: relative;
+  /* max-width: 800px;
+  margin: auto; */
+  margin-left: 10%;
+}
+
+.video-container iframe {
+  width: 1064px;
+  height: 580px;
+  border-radius: 25px;
+}
+
+.info-box {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background: #F3B72C;
+  padding: 10px;
+  font-size: 15px;
+  font-weight: bold;
+  border-radius: 5px;
+  max-width: 250px;
+  width:300px; 
+  /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); */
+}
+@media (max-width: 768px) {
+  .video-container iframe {
+      height: 300px;
+  }
+
+  .info-box {
+      font-size: 12px;
+      padding: 8px;
+      max-width: 200px;
+  }
+}
+
+@media (max-width: 480px) {
+  h2 {
+      font-size: 20px;
+      text-align: center;
+  }
+
+  .video-container iframe {
+      height: 200px;
+  }
+
+  .info-box {
+      font-size: 10px;
+      padding: 6px;
+      max-width: 180px;
+  }
+}
+
+@media (max-width: 768px) {
+  .stats {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .stat {
+    width: 100%;
+  }
 }
 
 @media (max-width: 768px) {
