3rd section heading change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ position: absolute;
 /* width: 924px;
 height: 62px; */
 left: 145px;
-top: 1502px;
+margin-top: -50%;
 font-weight: 700;
 font-size: 49px;
 line-height: 62px;
